# projeto-durelli

./: .gitignore  CMakeLists.txt  README.md
include/: BaseNToBaseM.h  binario.h  binarioFracional.h  hexadecimal.h  ipv4.h  octal.h  verificaEntrada.h
src/: BaseNToBaseM.cpp  binario.cpp  binarioFracional.cpp  hexadecimal.cpp  ipv4.cpp  main.cpp  octal.cpp  verificaEntrada.cpp
